@@ -144,6 +144,8 @@ else (CMAKE_CROSSCOMPILING AND MINGW)
     set (CMAKE_EXTRA_INCLUDE_FILES)
 endif (CMAKE_CROSSCOMPILING AND MINGW)
 
+check_type_size (ssize_t HAVE_SSIZE_T)
+
 OPTION(WITH_BLUETOOTH "Bluetooth support" ON)
 if (WITH_BLUETOOTH)
     if (WIN32)
