@@ -24,6 +24,7 @@ ChangeLog
 [-] * Fixed possible crash when backing up ringtones.
 [-] * Fix possible race condition in searching.
 [-] * Fixed invoking of CMake with output to custom directory.
+[-] * Compile on platforms where ssize_t does not exist.
 
 20081119 - 1.21.92
 
